force-app/main/default/objects/Appointment__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>Set a date and time for the appointment.</description>
    <label>Date</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>