force-app/main/default/objects/Appointment__c/fields/Duration__c.field-meta.xml
<CustomField>
    <fullName>Duration__c</fullName>
    <defaultValue>30</defaultValue>
    <description>Select a defined duration for the appointment.</description>
    <inlineHelpText>This duration field is displayed in minutes.</inlineHelpText>
    <label>Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>